--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -1,32 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
-    <metadata>
-        <id>System.Reactive.Core</id>
-        <version>$version$</version>
-        <title>Reactive Extensions - Core Library</title>
-        <authors>Microsoft</authors>
-        <owners>Microsoft</owners>
-        <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
-        <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
-        <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
-        <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>Reactive Extensions Core Library containing base classes and scheduler infrastructure.</description>
-        <copyright>Copyright (C) Microsoft Corporation</copyright>
-        <language>en-US</language>
-        <tags>Rx Reactive Extensions Observable LINQ Events</tags>
-        <dependencies>
-          <group>          
-            <dependency id="System.Reactive.Interfaces" version="$version$" />
-          </group>
-          <group targetFramework="netstandard1.0">
-            <dependency id="System.Reactive.Interfaces" version="$version$" />
-        </group>
-        <group targetFramework="netcoreapp1.0">
-            <dependency id="System.Reactive.Interfaces" version="$version$" />
-        </group>
-      </dependencies>
-    </metadata>
-    <files>
-        <file src="..\System.Reactive.Core\bin\$configuration$\**\System.Reactive.Core.*" exclude="**\*.deps.json" target="lib" />
-    </files>
+  <metadata>
+    <id>System.Reactive.Core</id>
+    <version>$version$</version>
+    <title>Reactive Extensions - Core Library</title>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
+    <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Reactive Extensions Core Library containing base classes and scheduler infrastructure.</description>
+    <copyright>Copyright (C) Microsoft Corporation</copyright>
+    <language>en-US</language>
+    <tags>Rx Reactive Extensions Observable LINQ Events</tags>
+    <dependencies>
+      <group>
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.0">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="netcoreapp1.0">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="net40">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="net45">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="net46">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.3">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+      <group targetFramework="sl5">
+        <dependency id="System.Reactive.Interfaces" version="$version$" />
+      </group>
+    </dependencies>
+  </metadata>
+  <files>
+    <file src="..\System.Reactive.Core\bin\$configuration$\**\System.Reactive.Core.*" exclude="**\*.deps.json" target="lib" />
+  </files>
 </package>
