--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -1,33 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
-    <metadata>
-        <id>System.Reactive.Providers</id>
-        <version>$version$</version>
-        <title>Reactive Extensions - Providers Library</title>
-        <authors>Microsoft</authors>
-        <owners>Microsoft</owners>
-        <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
-        <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
-        <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
-        <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>Reactive Extensions Providers Library used to build query providers and express complex event processing queries over those.</description>
-        <copyright>Copyright (C) Microsoft Corporation</copyright>
-        <language>en-US</language>
-        <tags>Rx Reactive Extensions Observable LINQ Events</tags>
-        <dependencies>
-          <group>
-            <dependency id="System.Reactive" version="$version$" />
-          </group>
-          <group targetFramework="netstandard1.0">
-            <dependency id="System.Reactive" version="$version$" />
-          </group>
-        </dependencies>
-        <frameworkAssemblies>
-            <frameworkAssembly assemblyName="System" targetFramework="net4" />
-            <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
-        </frameworkAssemblies>
-    </metadata>
-    <files>
-        <file src="..\System.Reactive.Providers\bin\$configuration$\**\System.Reactive.Providers.*" exclude="**\*.deps.json" target="lib" />
-    </files>
+  <metadata>
+    <id>System.Reactive.Providers</id>
+    <version>$version$</version>
+    <title>Reactive Extensions - Providers Library</title>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
+    <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Reactive Extensions Providers Library used to build query providers and express complex event processing queries over those.</description>
+    <copyright>Copyright (C) Microsoft Corporation</copyright>
+    <language>en-US</language>
+    <tags>Rx Reactive Extensions Observable LINQ Events</tags>
+    <dependencies>
+      <group>
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.0">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="net40">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="net45">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="net46">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.3">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="sl5">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+    </dependencies>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="System" targetFramework="net4" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
+    </frameworkAssemblies>
+  </metadata>
+  <files>
+    <file src="..\System.Reactive.Providers\bin\$configuration$\**\System.Reactive.Providers.*" exclude="**\*.deps.json" target="lib" />
+  </files>
 </package>
