--- a/Rx.NET/Source/NuSpecs/System.Reactive.Runtime.Remoting.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Runtime.Remoting.nuspec
@@ -1,24 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
-    <metadata>
-        <id>System.Reactive.Runtime.Remoting</id>
-        <version>$version$</version>
-        <title>Reactive Extensions - .NET Remoting Support</title>
-        <authors>Microsoft</authors>
-        <owners>Microsoft</owners>
-        <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
-        <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
-        <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
-        <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>Reactive Extensions Remoting Library used to expose observable sequences through .NET Remoting.</description>
-        <copyright>Copyright (C) Microsoft Corporation</copyright>
-        <language>en-US</language>
-        <tags>Rx Reactive Extensions Observable LINQ Events</tags>
-        <dependencies>
-            <dependency id="System.Reactive" version="$version$" />
-        </dependencies>
-    </metadata>
-    <files>
-        <file src="..\System.Reactive.Runtime.Remoting\bin\$configuration$\**\System.Reactive.Runtime.Remoting.*" exclude="**\*.deps.json" target="lib" />
-    </files>
+  <metadata>
+    <id>System.Reactive.Runtime.Remoting</id>
+    <version>$version$</version>
+    <title>Reactive Extensions - .NET Remoting Support</title>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
+    <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Reactive Extensions Remoting Library used to expose observable sequences through .NET Remoting.</description>
+    <copyright>Copyright (C) Microsoft Corporation</copyright>
+    <language>en-US</language>
+    <tags>Rx Reactive Extensions Observable LINQ Events</tags>
+    <dependencies>
+      <group>
+        <dependency id="System.Reactive" version="$version$" />
+      </group>      
+      <group targetFramework="net40">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+      <group targetFramework="net45">
+        <dependency id="System.Reactive" version="$version$" />
+      </group>
+    </dependencies>
+  </metadata>
+  <files>
+    <file src="..\System.Reactive.Runtime.Remoting\bin\$configuration$\**\System.Reactive.Runtime.Remoting.*" exclude="**\*.deps.json" target="lib" />
+  </files>
 </package>
