specify as build dep for packaging

--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -179,7 +179,11 @@
         ]
       },
       "dependencies": {
-      
+        "Microsoft.TargetingPack.Private.Silverlight.v5": {
+          "version": "1.0.2",
+          "type": "build"
+        }
+
       }
     }
   }
