--- a/Rx.NET/Source/System.Reactive.Providers/project.json
+++ b/Rx.NET/Source/System.Reactive.Providers/project.json
@@ -154,7 +154,10 @@
         ]
       },
       "dependencies": {
-            
+        "Microsoft.TargetingPack.Private.Silverlight.v5": {
+          "version": "1.0.2",
+          "type": "build"
+        }
       }
     }
   }
