--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -20,6 +20,19 @@
       </group>
       <group targetFramework="netstandard1.0">
         <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Collections" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Tools" version="4.0.1-rc2-24027" />
+        <dependency id="System.Globalization" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq" version="4.1.0-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
+        <dependency id="System.Reflection" version="4.1.0-rc2-24027" />
+        <dependency id="System.Reflection.Extensions" version="4.0.1-rc2-24027" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
+        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+        <dependency id="System.Threading" version="4.0.11-rc2-24027" />
+        <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
       </group>
       <group targetFramework="net40">
         <dependency id="System.Reactive" version="$version$" />
@@ -32,6 +45,19 @@
       </group>
       <group targetFramework="netstandard1.3">
         <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Collections" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Tools" version="4.0.1-rc2-24027" />
+        <dependency id="System.Globalization" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq" version="4.1.0-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
+        <dependency id="System.Reflection" version="4.1.0-rc2-24027" />
+        <dependency id="System.Reflection.Extensions" version="4.0.1-rc2-24027" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
+        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+        <dependency id="System.Threading" version="4.0.11-rc2-24027" />
+        <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
       </group>
       <group targetFramework="sl5">
         <dependency id="System.Reactive" version="$version$" />
