--- a/Rx.NET/Source/NuSpecs/System.Reactive.Windows.Threading.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Windows.Threading.nuspec
@@ -20,6 +20,14 @@
       </group>
       <group targetFramework="uap10.0">
         <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Tools" version="4.0.1-rc2-24027" />
+        <dependency id="System.Globalization" version="4.0.11-rc2-24027" />
+        <dependency id="System.Reflection" version="4.1.0-rc2-24027" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
+        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+        <dependency id="System.Runtime.InteropServices.WindowsRuntime" version="4.0.1-rc2-24027" />
+        <dependency id="System.Threading" version="4.0.11-rc2-24027" />
       </group>
       <group targetFramework="netcore451">
         <dependency id="System.Reactive" version="$version$" />
