Add runtime directives for Rx

--- a/Rx.NET/Source/System.Reactive.Linq/project.json
+++ b/Rx.NET/Source/System.Reactive.Linq/project.json
@@ -26,6 +26,9 @@
         "Reactive/Internal/Observers.cs",
         "Reactive/Internal/Producer.cs"
       ]
+    },
+    "embed": {
+      "includeFiles": "Properties/System.Reactive.Linq.rd.xml"
     }
   },
   
