--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -21,6 +21,9 @@
     "xmlDoc": true,
     "compile": {
       "exclude": [ "Strings_PlatformServices.Designer.cs" ]
+    },
+    "embed": {
+      "includeFiles": "Properties/System.Reactive.PlatformServices.rd.xml"
     }
   },
   
