--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -16,9 +16,11 @@
   "buildOptions": {
     "keyFile": "../35MSSharedLib1024.snk",
     "publicSign": true,
-    "define": ["SIGNED"],
+    "define": [ "SIGNED" ],
+    "nowarn": [ "CS1591" ],
+    "xmlDoc": true,
     "compile": {
-      "exclude": ["Strings_PlatformServices.Designer.cs"]
+      "exclude": [ "Strings_PlatformServices.Designer.cs" ]
     }
   },
   
