Put netstandard output into PCL 259 directory in nupkg

--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -82,5 +82,6 @@
   </metadata>
   <files>
     <file src="..\System.Reactive.Core\bin\$configuration$\**\System.Reactive.Core.*" exclude="**\*.deps.json" target="lib" />
+    <file src="..\System.Reactive.Core\bin\$configuration$\netstandard1.0\System.Reactive.Core.*" exclude="**\*.deps.json" target="lib\portable-win8+net45+wp8+wpa81" />
   </files>
 </package>
