--- a/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
@@ -43,5 +43,6 @@
   </metadata>
   <files>
     <file src="..\System.Interactive.Async.Providers\bin\$configuration$\**\System.Interactive.Async.Providers.*" exclude="**\*.deps.json" target="lib" />
+    <file src="..\System.Interactive.Async.Providers\bin\$configuration$\netstandard1.0\System.Interactive.Async.Providers.*" exclude="**\*.deps.json" target="lib\portable-win8+net45+wp8+wpa81" />
   </files>
 </package>
