--- a/Rx.NET/Source/NuSpecs/Microsoft.Reactive.Testing.nuspec
+++ b/Rx.NET/Source/NuSpecs/Microsoft.Reactive.Testing.nuspec
@@ -76,5 +76,6 @@
   </metadata>
   <files>
     <file src="..\Microsoft.Reactive.Testing\bin\$configuration$\**\Microsoft.Reactive.Testing.*" exclude="**\*.deps.json" target="lib" />
+    <file src="..\Microsoft.Reactive.Testing\bin\$configuration$\netstandard1.0\Microsoft.Reactive.Testing.*" exclude="**\*.deps.json" target="lib\portable-win8+net45+wp8+wpa81" />
   </files>
 </package>
