--- a/Rx.NET/Source/NuSpecs/System.Reactive.Windows.Threading.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Windows.Threading.nuspec
@@ -16,10 +16,10 @@
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     <dependencies>
       <group>
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
       </group>
       <group targetFramework="uap10.0">
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
         <dependency id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" />
         <dependency id="System.Diagnostics.Tools" version="4.0.1-rc2-24027" />
         <dependency id="System.Globalization" version="4.0.11-rc2-24027" />
@@ -30,16 +30,16 @@
         <dependency id="System.Threading" version="4.0.11-rc2-24027" />
       </group>
       <group targetFramework="netcore451">
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
       </group>
       <group targetFramework="net40">
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
       </group>
       <group targetFramework="net45">
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
       </group>
       <group targetFramework="wpa81">
-        <dependency id="System.Reactive" version="$version$" />
+        <dependency id="System.Reactive.Core" version="$version$" />
       </group>
     </dependencies>
     <frameworkAssemblies>
