Change the strong name signing key; check in new one.

--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -14,8 +14,7 @@
   },
 
   "buildOptions": {
-    "keyFile": "../35MSSharedLib1024.snk",
-    "publicSign": true,
+    "keyFile": "../ReactiveX.snk",
     "define": [ "SIGNED" ],
     "nowarn": [ "CS1591" ],
     "xmlDoc": true,
@@ -24,17 +23,6 @@
     }
   },
   
-  "configurations": {
-    "ReleaseDelaySigned": {
-      "buildOptions": {
-        "publicSign": false,
-        "delaySign": true,
-        "define": [ "RELEASE", "TRACE" ],
-        "optimize": true
-      }
-    }
-  },
-
   "dependencies": {
     "System.Interactive": { "target": "project" }
   },
