--- a/Rx.NET/Source/System.Reactive.PlatformServices/project.json
+++ b/Rx.NET/Source/System.Reactive.PlatformServices/project.json
@@ -14,8 +14,7 @@
   },
 
   "buildOptions": {
-    "keyFile": "../35MSSharedLib1024.snk",
-    "publicSign": true,
+    "keyFile": "../ReactiveX.snk",
     "define": [ "SIGNED" ],
     "nowarn": [ "CS1591" ],
     "xmlDoc": true,
@@ -24,17 +23,6 @@
     },
     "embed": {
       "includeFiles": "Properties/System.Reactive.PlatformServices.rd.xml"
-    }
-  },
-  
-  "configurations": {
-    "ReleaseDelaySigned": {
-      "buildOptions": {
-        "publicSign": false,
-        "delaySign": true,
-        "define": ["RELEASE", "TRACE"],
-        "optimize": true
-      }
     }
   },
   
