--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -24,19 +24,12 @@
   },
 
   "dependencies": {
-    "System.Interactive.Async": { "target": "project" }
+    "System.Interactive.Async": { "target": "project" },
+    "System.Linq.Expressions": "4.0.11-rc2-24027",
+    "System.Linq.Queryable": "4.0.1-rc2-24027"
   },
   
   "frameworks": {
-    "net40": {
-      "buildOptions": {
-        "define": [
-          "HAS_APTCA",
-          "DESKTOPCLR",
-          "DESKTOPCLR40"
-        ]
-      }
-    },
     "net45": {
       "buildOptions": {
         "define": [
@@ -54,10 +47,6 @@
           "CRIPPLED_REFLECTION",
           "PLIB"
         ]
-      },
-      "dependencies": {
-        "System.Linq.Expressions": "4.0.11-rc2-24027",
-        "System.Linq.Queryable": "4.0.1-rc2-24027"
       }
     }
   }
