--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -22,25 +22,15 @@
       "includeFiles": "Properties/System.Reactive.Core.rd.xml"
     }
   },
-  
+
   "dependencies": {
-    "System.Reactive.Interfaces": { "target": "project" }
+    "System.Reactive.Interfaces": { "target": "project" },
+    "System.ComponentModel": "4.0.1-rc2-24027",
+    "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
+    "System.Dynamic.Runtime": "4.0.11-rc2-24027"
   },
   
   "frameworks": {
-    "net40": {
-      "buildOptions": {
-        "define": [
-          "NO_TASK_DELAY",
-          "HAS_APTCA",
-          "HAS_WINFORMS",
-          "USE_TIMER_SELF_ROOT",
-          "NO_WEAKREFOFT",
-          "DESKTOPCLR",
-          "DESKTOPCLR40"
-        ]
-      }
-    },
     "net45": {
       "buildOptions": {
         "define": [
@@ -96,11 +86,6 @@
           "USE_TIMER_SELF_ROOT",
           "PLIB"
         ]
-      },
-      "dependencies": {
-        "System.ComponentModel": "4.0.1-rc2-24027",
-        "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
-        "System.Dynamic.Runtime": "4.0.11-rc2-24027"
       }
     },
     "netstandard1.3": {
@@ -121,11 +106,6 @@
           "PLIB",
           "USE_TIMER_SELF_ROOT"
         ]
-      },
-      "dependencies": {
-        "System.ComponentModel": "4.0.1-rc2-24027",
-        "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
-        "System.Dynamic.Runtime": "4.0.11-rc2-24027"
       }
     },
     "netcoreapp1.0": {
@@ -147,9 +127,6 @@
         ]
       },
       "dependencies": {
-        "System.ComponentModel": "4.0.1-rc2-24027",
-        "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
-        "System.Dynamic.Runtime": "4.0.11-rc2-24027",
         "System.Threading.Thread": "4.0.0-rc2-24027",
         "System.Threading.ThreadPool": "4.0.10-rc2-24027"
       }
