--- a/Ix.NET/Source/System.Interactive.Async/project.json
+++ b/Ix.NET/Source/System.Interactive.Async/project.json
@@ -18,7 +18,10 @@
     "publicSign": true,
     "define": [ "SIGNED" ],
     "nowarn": [ "CS1591" ],
-    "xmlDoc": true
+    "xmlDoc": true,
+    "embed": {
+      "includeFiles": "Properties/System.Interactive.Async.rd.xml"
+    }
   },
   
   "configurations": {
