--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -25,8 +25,7 @@
   
   "dependencies": {
     "System.Interactive": { "target": "project" },
-    "System.Linq.Expressions": "4.0.11-rc2-24027",
-    "System.Linq.Queryable": "4.0.1-rc2-24027"
+    "System.Linq.Queryable": "4.0.1"
   },
   
   "frameworks": {
