--- a/Ix.NET/Source/System.Interactive/project.json
+++ b/Ix.NET/Source/System.Interactive/project.json
@@ -24,7 +24,7 @@
   },
 
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027"
+    "NETStandard.Library": "1.6.0"
   },
 
   "frameworks": {
