--- a/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
@@ -16,9 +16,9 @@
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     <dependencies>
       <group targetFramework="netstandard1.0">
-        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
-        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
-        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.1.0" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1" />
+        <dependency id="System.Runtime" version="4.1.0" />
       </group>
       <group targetFramework="net45" />
     </dependencies>
