--- a/Rx.NET/Source/NuSpecs/System.Reactive.Observable.Aliases.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Observable.Aliases.nuspec
@@ -30,16 +30,16 @@
       <group targetFramework="netstandard1.0">
         <dependency id="System.Reactive" version="$version$" />
         <dependency id="System.Reactive.Providers" version="$version$" />
-        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
-        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
-        <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.1.0" />
+        <dependency id="System.Runtime" version="4.1.0" />
+        <dependency id="System.Threading.Tasks" version="4.0.11" />
       </group>
       <group targetFramework="netstandard1.3">
         <dependency id="System.Reactive" version="$version$" />
         <dependency id="System.Reactive.Providers" version="$version$" />
-        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
-        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
-        <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.1.0" />
+        <dependency id="System.Runtime" version="4.1.0" />
+        <dependency id="System.Threading.Tasks" version="4.0.11" />
       </group>
     </dependencies>
   </metadata>
