--- a/Rx.NET/Source/System.Reactive.Linq/project.json
+++ b/Rx.NET/Source/System.Reactive.Linq/project.json
@@ -30,10 +30,10 @@
       "includeFiles": "Properties/System.Reactive.Linq.rd.xml"
     }
   },
-  
+
   "dependencies": {
     "System.Reactive.Core": { "target": "project" },
-    "System.Runtime.InteropServices.WindowsRuntime": "4.0.1-rc2-24027"
+    "System.Runtime.InteropServices.WindowsRuntime": "4.0.1"
   },
   
   "frameworks": {
